# capstone

./: .gitignore  README.md  fake_odom.py  keyboard_control.ino  motor_control_ros2.py  motor_controller_mapping.yaml
log/: latest_build  latest_list
src/: keyboard_control.ino  liquid_detection.ino  motor_control.ino  motor_control.ino.ino  object_detection.py  peristaltic_pump.ino.ino  pi_atmega.py  pi_cam.py  pump_liquid_sensor_combined.ino
src/atmega_pi/: atmega_pi.ino
src/atmega_pi/liquid_level/: liquid_level.ino
src/capstone_description/: CMakeLists.txt  package.xml  setup.py
src/capstone_description/config/: controller.yaml  mapper_params_online_async.yaml
src/capstone_description/launch/: display.launch.py
src/capstone_description/src/: motor_control_ros2.py  motor_lidar_test.py  object_detection.py
src/capstone_description/urdf/: robot_core.xacro  spray_paint_robot.urdf.xacro
src/capstone_ignition/: CMakeLists.txt
src/capstone_ignition/launch/: navigation.launch.py  robot.launch.py
src/capstone_ignition/maps/: goodymap.pgm  goodymap.yaml  my_mappy.pgm  my_mappy.yaml
src/capstone_ignition/params/: controller.yaml  nav2_params.yaml
src/capstone_ignition/urdf/: ignition.xacro  lidar.xacro  robot_core.xacro  spray_paint_robot.urdf.xacro
src/capstone_ignition/worlds/: turtlebot_world.sdf
src/cartographer_config/: CMakeLists.txt  package.xml
src/cartographer_config/config/: cartographer.lua
src/cartographer_config/launch/: cartographer_launch.py
src/log/: latest_build
src/ydlidar_ros2_ws/log/: latest_build  latest_list
